--- a/src/pages/servicii/FormServicii/formServicii.css
+++ b/src/pages/servicii/FormServicii/formServicii.css
@@ -1,3 +1,15 @@
 .services-page .modal-overlay .modal-content {
-    height: 270px;
+    height: 200px;
 }
+
+
+.services-page .modal-overlay .modal-content .new-service-form .buttons-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.services-page .modal-overlay .modal-content .new-service-form  input {
+    width: 95%;
+    margin-bottom: 5px;
+    padding: 5px;
+  }
