finalizare pagina facturi + mici refactorizari

--- a/src/components/t-body/t-body.css
+++ b/src/components/t-body/t-body.css
@@ -19,3 +19,13 @@ td.icon > svg {
   justify-content: space-around;
   align-items: center;
 }
+
+.trash-wreapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.trash-wreapper svg {
+  cursor: pointer;
+}
