modificare design butoane control programari

--- a/src/components/t-body/t-body.css
+++ b/src/components/t-body/t-body.css
@@ -16,7 +16,9 @@ td.icon > svg {
 
 .buttons-wrapper {
   display: flex;
-  gap: 5px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .trash-wreapper {
