--- a/src/pages/casa/cashRegister.css
+++ b/src/pages/casa/cashRegister.css
@@ -8,6 +8,10 @@
   
   .cash-page .title h2 {
     position: relative;
-    right: 50%;
+    right: 55%;
+    font-size: 30px;
+    letter-spacing: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
+  
   
