--- a/src/pages/programari/appointments.css
+++ b/src/pages/programari/appointments.css
@@ -6,6 +6,11 @@
   margin-top: 5px;
 }
 
+.appointments-page .modal-fisa {
+  width: 100%;
+  height: auto;
+}
+
 .appointments-page .title h2 {
   position: absolute;
   right: 45%;
