--- a/src/components/Keyboard/keyboard.css
+++ b/src/components/Keyboard/keyboard.css
@@ -1,5 +1,13 @@
-.keyboard-container .keyboard {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
 
+.keyboard {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 6px;
+  overflow: hidden;
+  z-index: 10;
+  backdrop-filter: blur(15px);
+  border: 1px solid rgba(255, 255, 255, 0);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+}
