--- a/src/pages/casa/cashRegister.css
+++ b/src/pages/casa/cashRegister.css
@@ -14,4 +14,17 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
   
-  
+
+  .cash-page .cash-page-wrapper {
+    display: flex;
+    gap: 10px;
+  }
+
+  .cash-page .table-display-container {
+    width: 70%;
+  }
+ 
+  .cash-page .keyboard {
+    width: 110%;
+    height: 40vh;
+  }
