--- a/src/components/KeyboardButton/keyboardButton.css
+++ b/src/components/KeyboardButton/keyboardButton.css
@@ -1,10 +1,10 @@
-.modal-fisa-container .keyboard .num {
+ .keyboard .num {
     display: grid;
     place-items: center;
     width: 100%;
     height: 80px;
     color: #221e1e;
-    font-weight: 400;
+    font-weight: 700;
     font-size: 20px;
     cursor: pointer;
     user-select: none;
