--- a/src/pages/casa/cashRegister.css
+++ b/src/pages/casa/cashRegister.css
@@ -1,30 +1,104 @@
+.cash-page {
+  width: 100%;
+}
+
 .cash-page .title {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center; 
-    height: 47px;
-    margin-top: 5px;
-  }
-  
-  .cash-page .title h2 {
-    position: relative;
-    right: 55%;
-    font-size: 30px;
-    letter-spacing: 15px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 47px;
+  margin-top: 5px;
+}
 
-  .cash-page .cash-page-wrapper {
-    display: flex;
-    gap: 10px;
-  }
+.cash-page .title h2 {
+  position: relative;
+  right: 55%;
+  font-size: 30px;
+  letter-spacing: 15px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
 
-  .cash-page .table-display-container {
-    width: 70%;
-  }
- 
-  .cash-page .keyboard {
-    width: 110%;
-    height: 40vh;
-  }
+.cash-page .cash-page-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.cash-page .table-container th {
+  padding: 2px;
+  font-size: 12px;
+  background-color: rgba(171, 10, 235, 0.932);
+}
+
+.cash-page .table-wrapper {
+  height: 100%;
+  margin-top: 4px
+}
+
+.cash-page .table-container {
+  width: 100%;
+  height: 80%;
+  overflow: auto;
+}
+
+.cash-page .table-container table {
+  width: 100%;
+}
+
+.cash-page .table-container td {
+  text-align: center;
+  border-bottom: 1px dotted rgb(12, 12, 12);
+  padding: 1;
+}
+
+.cash-page .lista-bonuri {
+  margin-top: 5px;
+  height: 100%;
+}
+
+.cash-page .wrapper-suma {
+  margin-top: 5px;
+  display: flex;
+  justify-content: space-between;
+  height: 50px;
+}
+
+.cash-page .wrapper-suma .suma {
+  width: 80%;
+  font-size: 20px;
+}
+
+.cash-page .cash-display-wrapper {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+  margin-top: 2px;
+}
+
+.cash-page .cash-display-wrapper .cash-display {
+  display: flex;
+  width: calc(100% / 3);
+  height: 100px;
+  flex-direction: column;
+  border: 1px solid red;
+  gap: 15px;
+  position: relative;
+}
+
+.cash-page .cash-display-wrapper .cash-display .span2{
+  position: relative;
+  left: 30%;
+  font-weight: 1000;
+  letter-spacing: 3px;
+} 
+
+.cash-page .buttons-wrapper {
+  justify-content: space-between;
+}
+
+.cash-page .buttons-wrapper button{
+  width: calc(100% / 3);
+}
