--- a/src/pages/facturi/invoices.css
+++ b/src/pages/facturi/invoices.css
@@ -12,4 +12,15 @@
   }
   
   
+  .invoices-page .table-display tbody tr:nth-child(even) {
+    background-color: #f7e9e9;
+  }
   
+  .invoices-page .table-display tbody tr:nth-child(odd) {
+    background-color: #a7a1a1;
+  }
+  
+  .invoices-page .table-display tbody tr:hover {
+    background-color: rgba(171, 10, 235, 0.932);
+    cursor: pointer;
+  }
