--- a/src/pages/stocuri/inventory.css
+++ b/src/pages/stocuri/inventory.css
@@ -4,6 +4,7 @@
   align-items: center;
   height: 47px;
   margin-top: 5px;
+  position: relative;
 }
 
 .inventory-page .title h2 {
@@ -11,4 +12,38 @@
   left: 40%;
 }
 
+.inventory-page .table-container {
+  width: 100%;
+  overflow: auto;
+}
 
+.inventory-page .table-container tbody tr:nth-child(even) {
+  background-color: #f7e9e9;
+}
+
+.inventory-page .table-container tbody tr:nth-child(odd) {
+  background-color: #a7a1a1;
+}
+
+.inventory-page .table-container tbody tr:hover {
+  background-color: rgba(171, 10, 235, 0.932);
+  cursor: pointer;
+}
+
+.inventory-page .table-container th {
+  padding: 3px;
+  text-align: center;
+  border: 1px solid #7f8686;
+  position: relative;
+  font-size: 12px;
+  font-weight: 600;
+  background-color: rgba(171, 10, 235, 0.932);
+}
+
+.inventory-page .table-container td {
+  padding: 3px;
+  text-align: center;
+  position: relative;
+  font-size: 12px;
+  font-weight: 600;
+}
