--- a/src/pages/servicii/FormServicii/formServicii.css
+++ b/src/pages/servicii/FormServicii/formServicii.css
@@ -2,3 +2,15 @@
     height: 270px;
     width: 300px;
 }
+
+
+.services-page .modal-overlay .modal-content .new-service-form .buttons-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.services-page .modal-overlay .modal-content .new-service-form  input {
+    width: 95%;
+    margin-bottom: 5px;
+    padding: 5px;
+  }
