--- a/src/pages/programari/FormAppointments/formAppointments.css
+++ b/src/pages/programari/FormAppointments/formAppointments.css
@@ -1,5 +1,5 @@
 .appointments-page .modal-overlay .modal-content {
-    height: 250px;
+    height: 270px;
     width: 300px;
 }
 
@@ -13,4 +13,23 @@
     width: 95%;
     margin-bottom: 5px;
     padding: 5px;
+  }
+
+  .new-client-div {
+    display: flex;
+    font-size: 11px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .new-client-div button {
+    padding: 0;
+    font-size: 11px;
+    width: 70px;
+    margin-bottom: 5px;
+  }
+
+  .new-client-div p {
+    margin: 0;
+    margin-bottom: 5px;
   }
