--- a/src/pages/servicii/FormServicii/formServicii.css
+++ b/src/pages/servicii/FormServicii/formServicii.css
@@ -14,3 +14,9 @@
     margin-bottom: 5px;
     padding: 5px;
   }
+
+  .services-page .modal-overlay .modal-content #buton-produse {
+    position: relative;
+    left: 10%;
+    margin-bottom: 10px;
+  }
