--- a/src/components/ModalProduseExtra/modalProduseExtra.css
+++ b/src/components/ModalProduseExtra/modalProduseExtra.css
@@ -1,4 +1,4 @@
-.modal-reteta-overlay {
+.modal-produseExtra-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -11,10 +11,10 @@
     z-index: 1000;
   }
   
-  .modal-reteta-overlay .modal-reteta-content {
+  .modal-produseExtra-overlay .modal-produseExtra-content {
     background-color: white;
     height: 300px;
-    width: 290px;
+    width: 375px;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
@@ -25,12 +25,12 @@
   }
   
 
-  .modal-reteta-overlay .modal-reteta-content .reteta-table {
+  .modal-produseExtra-overlay .modal-produseExtra-content .produseExtra-table {
     height: calc(100% - 48px); 
     overflow: auto;
   }
   
-  .modal-reteta-overlay .modal-reteta-content .table-dispaly {
+  .modal-produseExtra-overlay .modal-produseExtra-content .table-dispaly {
     border-collapse: separate;
     border-spacing: 0;
     width: 100%;
@@ -39,16 +39,16 @@
     top: 0;
   }
 
-  .modal-reteta-overlay .modal-reteta-content .table-dispaly .small{
+  .modal-produseExtra-overlay .modal-produseExtra-content .table-dispaly .small{
     width: 50px;
   }
   
-  .modal-reteta-overlay .modal-reteta-content .table-dispaly .tbody {
+  .modal-produseExtra-overlay .modal-produseExtra-content .table-dispaly .tbody {
     position: relative;
     z-index: 0; 
   }
 
-  .modal-reteta-overlay .modal-reteta-content .table-dispaly .thead {
+  .modal-produseExtra-overlay .modal-produseExtra-content .table-dispaly .thead {
     position: sticky;
     top: 0;
     z-index: 1; 
@@ -56,19 +56,23 @@
   }
 
   
-  .modal-reteta-overlay .modal-reteta-content .table-dispaly td {
+  .modal-produseExtra-overlay .modal-produseExtra-content .table-dispaly td {
     text-align: center;
   }
   
-  .modal-reteta-overlay .modal-reteta-content .table-dispaly .thead th {
+  .modal-produseExtra-overlay .modal-produseExtra-content .table-dispaly .thead th {
     padding: 0 10px 0 10px;
     font-size: 12px;
   }
   
-  .modal-reteta-overlay .modal-reteta-content .buttons-wrapper {
+  .modal-produseExtra-overlay .modal-produseExtra-content .buttons-wrapper {
     width: 100%;
     position: sticky;
     bottom: 0;
     z-index: 1;
+  }
+
+  .modal-produseExtra-overlay .modal-produseExtra-content .descriere {
+    width: 150px;
   }
   
