--- a/src/pages/servicii/FormServicii/formServicii.css
+++ b/src/pages/servicii/FormServicii/formServicii.css
@@ -15,8 +15,11 @@
     padding: 5px;
   }
 
-  .services-page .modal-overlay .modal-content #buton-produse {
-    position: relative;
-    left: 10%;
+  .services-page .modal-overlay .modal-content .new-service-form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .services-page .modal-overlay .modal-content .new-service-form button {
     margin-bottom: 10px;
   }
