--- a/src/components/ProductsInvoiceForm/productsInvoiceForm.css
+++ b/src/components/ProductsInvoiceForm/productsInvoiceForm.css
@@ -7,17 +7,15 @@
   
   .form-produse .input {
     width: 45%;
-    padding: 5px;
+    padding: 2px;
     margin-left: 9px;
-    margin-bottom: 5px;
+    margin-bottom: 2px;
   }
   
   .form-produse button {
-    position: absolute;
-    left: 50.70%;
-    bottom: 5%;
-    width: 270px;
-    padding: 2px;
+    padding: 0 10px 0 10px;
+    position: relative;
+    left: 43%;
   }
   
   @media (max-width: 1019px) {
