--- a/src/components/ProductsInvoiceForm/productsInvoiceForm.css
+++ b/src/components/ProductsInvoiceForm/productsInvoiceForm.css
@@ -1,7 +1,7 @@
 .form-produse {
     display: flex;
-    flex-wrap: wrap; 
-    justify-content: space-between;
+    flex-direction: column;
+    align-items:flex-end;
     position: relative;
   }
   
@@ -11,11 +11,13 @@
     margin-left: 9px;
     margin-bottom: 2px;
   }
+
   
-  .form-produse button {
-    padding: 0 10px 0 10px;
-    position: relative;
-    left: 43%;
+  .form-produse .adauga {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+
   }
   
   @media (max-width: 1019px) {
