--- a/src/components/ProtocolProducsForm/protocolProductsForm.css
+++ b/src/components/ProtocolProducsForm/protocolProductsForm.css
@@ -3,13 +3,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
   position: relative;
+  width: 50%;
 }
 
 .form-protocol .input {
   width: 97%;
-  padding: 5px;
+  padding: 2px;
   margin-left: 9px;
-  margin-bottom: 5px;
+  margin-bottom: 2px;
 }
 
 .form-protocol button {
