--- a/src/pages/programari/appointments.css
+++ b/src/pages/programari/appointments.css
@@ -1,3 +1,7 @@
+.appointments-page {
+  width: 87%;
+}
+
 .appointments-page .title {
   display: flex;
   align-items: center;
@@ -13,7 +17,7 @@
 
 .appointments-page .title h2 {
   position: absolute;
-  right: 45%;
+  left: 45%;
 }
 
 .appointments-page .title .buttons-wrapper {
