--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -1,6 +1,38 @@
-.dashboard {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+.dashboard-page {
+    width: 90vw;
 }
+
+.dashboard-page .title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 47px;
+    margin-top: 5px;
+  }
+  
+  .dashboard-page .title h2 {
+    position: relative;
+    margin: 0;
+    left: 35%;
+  }
+  
+
+  .dashboard-page .charts-wrapper .up , .down {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .dashboard-page .invoicesChart {
+    position: relative;
+    top: 5px;
+  }
+
+  .dashboard-page .chart-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .dashboard-page .chart-box input {
+    text-align: center;
+  }
