adaugare chart-uri, rezolvare bug facturi, refactorizari

--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -20,6 +20,7 @@
   .dashboard-page .charts-wrapper .up , .down {
     display: flex;
     justify-content: space-around;
+    height: 235px;
   }
 
   .dashboard-page .invoicesChart {
